--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "stlc_project"
+name = "substitution"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 nom = "8.0.0"
+rustyline = "15"
